# OmegaDocumentCreator

./: .env.example  .gitignore  AGENTS.md  PROJECT.md  STAGE4_HANDOFF.md  projectoverview.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: ai.py  config.py  document_generation.py  main.py  security.py  seed.py  store.py
apps/api/app/domain/: clients.py  users.py
apps/api/migrations/: 0001_initial.sql
apps/api/omega_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_api.py  test_clients.py  test_migration_schema.py  test_security.py  test_settings.py
apps/frontend/: Dockerfile  index.html  package-lock.json  package.json  run-frontend.cmd  tsconfig.app.json  vite.config.ts  vite.run.config.ts
apps/frontend/src/: App.tsx  app-shell.test.tsx  app.test.tsx  styles.css
apps/frontend/src/auth/: auth-context.tsx
apps/frontend/src/components/: app-shell.tsx
apps/frontend/src/data/: client-data-context.tsx  seeded-clients.ts
apps/frontend/src/documents/: document-api.ts  document-composer.ts  document-preview.tsx  document-templates.ts  document-types.ts  export-generated-document.ts  pdf-export.ts  template-picker.tsx  word-export.ts  workflow-document-builders.test.ts  workflow-document-builders.ts
apps/frontend/src/pages/: admin-page.tsx  client-documents-page.tsx  client-form-page.tsx  client-profile-page.tsx  clients-page.tsx  dashboard-page.tsx  documents-page.tsx  files-page.tsx  login-page.tsx  (+3 more)
docs/superpowers/plans/: 2026-06-06-income-protection-shell.md  2026-06-13-ai-document-flow.md
infra/docker/: compose.yaml
